@@ -15,7 +15,7 @@ provides:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto:
     file: lib/Net/FullAuto.pm
-    version: 0.999920
+    version: 0.999921
   Net::FullAuto::FA_Core:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto::FA_DB:
@@ -68,4 +68,4 @@ requires:
   YAML: 0
 resources:
   license: http://opensource.org/licenses/gpl-3.0.html
-version: 0.999920
+version: 0.999921
