@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 60a4ed53d3ec5814ae9fc866d01c4b8da817a5a5 ChangeLog
+SHA1 0e447d4d79fc97fd56d0c365747771664a65b4bb ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 a75429eb96da2c476ec43aceaa61ea6f3941342d META.yml
-SHA1 af8d5fca47a8c6d598175354156c67bec590962d MYMETA.json
-SHA1 f375c872058ccb179c00bf73690ac66c7e1add10 MYMETA.yml
-SHA1 ef5636000a24233ca5b0f534e4205ead39cb0aaf Makefile.PL
+SHA1 4d684970e348521ff45265eab7279ae7219112e4 META.yml
+SHA1 191ea7a490077139fc6f300e55a0e2002528ac50 MYMETA.json
+SHA1 3fbbaae2336520437a3b0a545458227e7bf67bec MYMETA.yml
+SHA1 9b33f20cbe29538ea084e1084c884b2c06a9a811 Makefile.PL
 SHA1 fd6c642523f44765fc64b3515231a3ad62f90d73 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 b0199ab6b57e48f9b4e72d1f621cdcb44eff8ef4 lib/Net/FullAuto.pm
+SHA1 527fb094a3e73061706a77564935d3648187cb87 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -54,7 +54,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlBf1ToACgkQJM3IZYB6aOqxswCfdv88+miq7xnVJPQyOJG84QD3
-rEIAniCTV5HSSi2ed6osnxjNx/E8RYEN
-=pEng
+iEYEARECAAYFAlBgZTAACgkQJM3IZYB6aOqLnQCdFfQoJ6KRQiMlCZPKtzPwkjdx
+d14AoKsF6laZcw0CwKt+2VZE2fq86OBq
+=nL/b
 -----END PGP SIGNATURE-----
