@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999920';
+our $VERSION='0.999921';
 
 
 use 5.005;
