@@ -19,6 +19,14 @@
 ################################################################
 
 
+2012-09-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999921 released.
+
+        * Added inetutils to Cygwin install for all configurations.
+          /bin/ftp is now no longer part of Cygwin base install.
+
+
 2012-09-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999920 released.
